--- a/back/src/config/config.ts.dist
+++ b/back/src/config/config.ts.dist
@@ -1,12 +1,14 @@
 export default {
+  host: 'http://localhost:8080',
   port: 3000,
   jwt: {
-    secret: "asdpjD4AJADSOh2IJQ9128JAOIDJJSjsdH0oiJASODIJaqdfgmvc7423",
+    secret: "XXXXHAHISISAHXXXXXXXXX",
     expiration: "1h"
   },
   email: {
     service: 'gmail',
     user: 'gelplusfrance@gmail.com',
-    password: 'MacronMelenchonLePen',
-  }
+    password: 'XXXXXXXXXXX',
+  },
+  emailTo: 'ivancerni@gmail.com'
 };
