--- a/front/package.json
+++ b/front/package.json
@@ -12,7 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "three": "^0.115.0"
+    "three": "^0.115.0",
+    "toastify-js": "^1.9.1"
   },
   "devDependencies": {
     "prettier": "^2.0.4",
