a lot of changes and optimizations

--- a/back/src/config/config.ts.dist
+++ b/back/src/config/config.ts.dist
@@ -10,5 +10,6 @@ export default {
     user: 'gelplusfrance@gmail.com',
     password: 'XXXXXXXXXXX',
   },
-  emailTo: 'ivancerni@gmail.com'
+  emailTo: 'ivancerni@gmail.com',
+  hashSalt: 'XXXXXXXXX'
 };
