--- a/back/package.json
+++ b/back/package.json
@@ -6,6 +6,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/body-parser": "^1.19.0",
     "@types/cors": "^2.8.6",
+    "@types/hashids": "^1.0.32",
     "@types/helmet": "0.0.47",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.0.13",
@@ -20,18 +21,21 @@
     "class-validator": "^0.12.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "hashids": "^2.2.1",
     "helmet": "^3.23.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "nodemailer": "^6.4.11",
+    "nodemailer-sendinblue-transport": "^1.2.3",
     "path": "^0.12.7",
     "reflect-metadata": "^0.1.13",
     "sharp": "^0.26.0",
     "ts-node-dev": "^1.0.0-pre.49",
     "tslib": "^2.0.1",
     "typeorm": "0.2.25",
-    "uuid": "^8.3.0"
+    "uuid": "^8.3.0",
+    "valid-url": "^1.0.9"
   },
   "scripts": {
     "tsc": "tsc",
