--- a/front/.gitignore
+++ b/front/.gitignore
@@ -1,12 +1,24 @@
-node_modules
-example
-.idea
-.vcode
-public/images
-public/config.js
-public/app.js
-public/admin.js
-public/bundle.js
-public/unsubscribe.js
-config.js
-v8-compile-cache-0
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
